Move legacy tests to Gradle and update to JUnit4